v8.8.0/_sources/generated/pcdsdevices.mpod_apalis.MPODApalisChannel.rst.txt
pcdsdevices.mpod\_apalis.MPODApalisChannel
==========================================

.. currentmodule:: pcdsdevices.mpod_apalis

.. autoclass:: MPODApalisChannel

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - voltage
          - :class:`~pcdsdevices.signal.EpicsSignalEditMD`
          - ``:VoltageMeasure``
          - MPOD Channel Voltage Measurement [V]. The value of this signal is the actual measured voltage of the channel. If you put to this signal it will change the channel's voltage setpoint.
          - normal
          - 
    
        * - max_voltage
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:VoltageNominal``
          - MPOD Channel Maximum Voltage [V]
          - normal
          - 
    
        * - current
          - :class:`~pcdsdevices.signal.EpicsSignalEditMD`
          - ``:CurrentMeasure``
          - MPOD Channel Current Measurement [A]. The value of this signal is the actual measured current of the channel. If you put to this signal it will change the channel's current setpoint.
          - normal
          - 
    
        * - max_current
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:CurrentNominal``
          - MPOD Channel Current Maximum
          - normal
          - 
    
        * - state
          - :class:`~ophyd.signal.EpicsSignal`
          - ``:isOn``
          - MPOD Channel State [Off/On]
          - normal
          - 
    
        * - desc
          - :class:`~ophyd.signal.EpicsSignal`
          - ``:VoltageMeasure.DESC``
          - MPOD Channel Description
          - normal
          - 
    
        * - last_voltage_set
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:VoltageSet``
          - Readback to verify the MPOD Channel Voltage Setpoint [V]. This is used to compare the measured readback voltage with the last value we set to the channel. To change the voltage, use the voltage signal or the set_voltage helper method.
          - normal
          - 
    
        * - is_trip
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:isTrip``
          - True if MPOD channel is tripped.
          - omitted
          - 
    

    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: off
    .. automethod:: on
    .. automethod:: post_elog_status
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: screen
    .. automethod:: set_current
    .. automethod:: set_voltage
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: subscriptions
    .. autoattribute:: voltage_setpoint
    
    